--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
   - test
   - coverage
   - docker
+  - deploy
+
 build:
   image: adoptopenjdk:11
   stage: build
@@ -61,3 +63,14 @@ docker:
     - docker tag "$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID" "$CI_REGISTRY_IMAGE":"latest"
     - docker push "$CI_REGISTRY_IMAGE":"latest"
 
+production:
+  stage: deploy
+  image: ruby:latest
+  script:
+    - apt-get update -qy
+    - apt-get install -y ruby-dev
+    - gem install dpl
+    #                        App name from prev step  Key from your heroku account
+    - dpl --provider=heroku --app=ruben-mavi-autos-api --api-key=$50a6593d-5493-44dd-a6cb-35b7d985dd5c
+  only: # Heroku will ONLY deploy from main or master branch!
+    - master
