re-commenting-out environmental variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
 # Environment Variable Defaults (Comment out or remove before checking)
-DB_HOST=localhost:3306
-DB_NAME=autos
-DB_USER=autos_user
-DB_PWD=autos_user
+#DB_HOST=localhost:3306
+#DB_NAME=autos
+#DB_USER=autos_user
+#DB_PWD=autos_user
 
 # Database Props
 spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true
