--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,14 +63,16 @@ docker:
     - docker tag "$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID" "$CI_REGISTRY_IMAGE":"latest"
     - docker push "$CI_REGISTRY_IMAGE":"latest"
 
-production:
+deploy:
   stage: deploy
-  image: ruby:latest
+  image: registry.gitlab.com/galvanize-labs/instructors/aws-kubernetes-cluster/base-aws-eks-image:latest
+  before_script:
+    - export IMAGE="$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID"
+    - aws configure set region us-west-2
+    - aws configure set output json
+    - aws eks update-kubeconfig --name "$CLUSTER_NAME"
+    - aws sts get-caller-identity
+
   script:
-    - apt-get update -qy
-    - apt-get install -y ruby-dev
-    - gem install dpl
-    #                        App name from prev step  Key from your heroku account
-    - dpl --provider=heroku --app=ruben-mavi-autos-api --api-key=$HEROKU_API_KEY
-  only: # Heroku will ONLY deploy from main or master branch!
-    - master
+    - envsubst < k8s-deploy.yaml | kubectl apply -f -
+    - kubectl apply -f k8s-service.yaml
