--- a/autos-api-deployment.yaml
+++ b/autos-api-deployment.yaml
@@ -20,13 +20,13 @@ spec:
             - containerPort: 8080
           env:
             - name: DB_HOST
-              value: $DB_HOST
+              value: "$DB_HOST"
             - name: DB_NAME
-              value: $DB_NAME
+              value: "$DB_NAME"
             - name: DB_USER
-              value: $DB_USER
+              value: "$DB_USER"
             - name: DB_PWD
-              value: $DB_PWD
+              value: "$DB_PWD"
       imagePullSecrets: # Be sure the token name matches what you created on K8s
         - name: mtp-autos-registry
 ---
